Add post update and delete endpoints
